# Tensors

./: README.md  pyproject.toml  tensors.ipynb
notebooks/: algebraic_operations.ipynb  constructions_types_checks.ipynb
src/tensors/: __init__.py  covector.py  operations.py  tensor.py  tensor_types.py  validation.py  vector.py
tests/: test_covector.py  test_tensor.py  test_vector.py
